# CyberASM

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  appveyor.yml
Examples/: adc.asm
Include/CyAsm/: ByteChunk.hpp  Immediate.hpp  MachineLanguage.hpp  MachineStream.hpp  Operand.hpp  Result.hpp  StreamReader.hpp  Utils.hpp
Include/CyAsm/X86/: Cas0.hpp  Cas2.hpp  Encoder.hpp  EncoderImpl.hpp  FeatureFlags.hpp  Instructions.hpp  MachineCodeExtensionTable.inl  MachineCodeTable.inl  MachineLanguage.hpp  Mapper.hpp  MnemonicTable.inl  Operand.hpp  OperandFlags.hpp  OperandTable.inl  OperandType.hpp  OperandTypes.hpp  Prefix.hpp  RegisterIdTable.inl  RegisterMnemonicTable.inl  RegisterSizeTable.inl  Registers.hpp  Size.hpp  Syntax.h
Source/: Encoders.cpp  MachineStream.cpp  Main.cpp  Operand.cpp  TestMain.cpp  Tests.cpp  TestsX86.cpp
Source/X86/: Encoder.cpp  Operand.cpp
examples/: add.asm
